# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.498 2006/01/04 20:28:23 wolf31o2 Exp $

  04 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh:
  Commented ccache for genkernel build which will resolve #117648 until a
  proper solution can be found. This is 2.0_rc13.

  04 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  Added patch from vapier for bug #117254.

  03 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/alpha.py,
  arch/amd64.py, arch/mips.py, arch/ppc.py, arch/ppc64.py, arch/s390.py,
  arch/sh.py, arch/sparc.py, arch/sparc64.py, arch/x86.py:
  Added -pipe to default CFLAGS/CXXFLAGS and doing some minor cleanup
  (comments mostly).

  03 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Remove chost/cflags etc. warning messages

  31 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Attempt to fix bug 117253; chost is wrong on autoresume

  28 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/embedded_target.py,
  modules/generic_stage_target.py, modules/netboot_target.py,
  modules/stage1_target.py:
  make setting of destdir more global and part of generic_stage_target

  28 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/netboot_target.py:
  Fix destpath bug in netboot target

  28 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage4_target.py:
  Fix for bug 116305;removed unnecessary pkgcache_path processing from the
  stage4 target

  23 Dec 2005; Eric Edgar <rocket@gentoo.org> arch/sh.py,
  modules/generic_stage_target.py, modules/stage4_target.py:
  remove stray ' from arch/sh.py

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/stage1/stage1-controller.sh:
  This finally fixes the issues with gcc-config/binutils-config in stage1.
  This is catalyst 2.0_rc12.
