@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.498 2006/01/04 20:28:23 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.499 2006/01/05 19:23:06 rocket Exp $
+
+  05 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  change .digests to .DIGESTS
 
   04 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/support/kmerge.sh:
